<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="org.opencv.cultoftheunicorn.marvel.cultoftheunicorn.marvel.NameActivity">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="64dp"
            android:text="@string/who_are_you_going_to_train"
            android:textSize="20sp"
            android:textColor="@color/lightBlack"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_the_same_name_for_the_same_person_everytime_you_train_that_person"
            android:textSize="15sp"
            android:textAlignment="center"
            android:gravity="center"
            android:padding="15dp"
            android:layout_below="@+id/textView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="71dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:textAlignment="center"
            android:gravity="center"/>

        <Button
            android:id="@+id/nextButton"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/next"
            android:textSize="25sp"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:textAllCaps="false" />

    </RelativeLayout>

</ScrollView>


